--- a/defense/abbr.tex
+++ b/defense/abbr.tex
@@ -54,8 +54,8 @@ align=center,fill=propa-grey]
 \setbeamertemplate{footline}[frame number]{}
 
 % Definition of variable
-\def\SAT{\textcolor{green}{\texttt{SAT}}\ }
-\def\UNSAT{\textcolor{red}{\texttt{UNSAT}}\ }
+\def\SAT{\textcolor{green}{\texttt{SAT}}}
+\def\UNSAT{\textcolor{red}{\texttt{UNSAT}}}
 
 \def\true{\textcolor{green}{\texttt{true}}}
 \def\false{\textcolor{red}{\texttt{false}}}
